<resources>
    <string name="app_name" translatable="false">NewMathTools</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_drawer_calendar">Calendar</string>
    <string name="nav_drawer_arithmetic_progression">Arithmetic Progression</string>
    <string name="nav_drawer_number_base_converter">Number Base Converter</string>
    <string name="nav_drawer_combinatorics">Combinatorics</string>
    <string name="nav_drawer_combinations">Combinations</string>
    <string name="nav_drawer_permutations">Permutations</string>
    <string name="nav_drawer_rising_factorial">Rising Factorial</string>
    <string name="nav_drawer_arithmetic">Arithmetic</string>
    <string name="nav_drawer_divisors_of_number">Divisors of number</string>
    <string name="nav_drawer_factorization">Factorization</string>
    <string name="nav_drawer_multiples_of_number">Multiples of number</string>
    <string name="nav_drawer_greatest_common_divisor">Greatest common divisor</string>
    <string name="nav_drawer_least_common_multiple">Least common multiple</string>
    <string name="nav_drawer_prime_numbers">Prime numbers</string>
    <string name="nav_drawer_linear_congruence">Linear congruence</string>
    <string name="nav_drawer_extended_euclidean_algorithm">Extended Euclidean algorithm</string>
    <string name="nav_drawer_help">Help</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_settings">Settings</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="show_steps">Show steps</string>
    <string name="compute">Compute</string>
    <string name="error_message_date_does_not_exist">Given day does not exist</string>
    <string name="error_message_year_out_of_range">Year must be greater than 1600</string>
    <string name="error_message_numbers_only">Fill all inputs with numeric values</string>

    <string name="initial_term_of_progression">Initial term of progression</string>
    <string name="common_difference_of_progression">Common difference</string>
    <string name="number_of_terms_of_progression">Number of terms</string>
    <string name="compute_product">Compute product</string>
    <string name="compute_sum">Compute sum</string>
    <string name="number">Number</string>
    <string name="base">Base</string>
    <string name="new_base">New base</string>
    <string name="error_message_base_range">Base must be in range 2 – 36</string>
    <string name="error_message_number_wrong_base">The number is not written in given base</string>

    <string-array name="benjamin_algorithm_steps">
        <item>1. %d \u2261 %d (mod 7)\n</item>
        <item>2. %s offset: %d\n</item>
        <item>3. %d ≡ %d (mod 7)\n</item>
        <item>4. ⌊%d/4⌋ = %d\n</item>
        <item>5. Century\'s offset: %d\n</item>
        <item>6. %d+%d+%d+%d+%d=%d\n</item>
        <item>7. %d ≡ %d (mod 7)\n</item>
    </string-array>
</resources>
