<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_drawer_calendar"/>
        <item
            android:id="@+id/nav_arithmetic_progression"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_arithmetic_progression"/>
        <item
            android:id="@+id/nav_number_base_converter"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_drawer_number_base_converter"/>
    </group>

    <item android:title="@string/nav_drawer_combinatorics">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_combination"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_drawer_combinations"/>
                <item
                    android:id="@+id/nav_permutation"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_permutations"/>
                <item
                    android:id="@+id/nav_rising_factorial"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_rising_factorial"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_drawer_arithmetic">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_divisors"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_drawer_divisors_of_number"/>
                <item
                    android:id="@+id/nav_factorization"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_factorization"/>
                <item
                    android:id="@+id/nav_multiples"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_multiples_of_number"/>
                <item
                    android:id="@+id/nav_gcd"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_greatest_common_divisor"/>
                <item
                    android:id="@+id/nav_lcm"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_least_common_multiple"/>
                <item
                    android:id="@+id/nav_primes"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_prime_numbers"/>
                <item
                    android:id="@+id/nav_linear_congruence"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_linear_congruence"/>
                <item
                    android:id="@+id/nav_extended_euclidean_algorithm"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_drawer_extended_euclidean_algorithm"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_drawer_help">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_about"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_settings"/>
        </menu>
    </item>

</menu>
