<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/day"
            style="@style/InputEditTextStyle"
            android:hint="@string/day"
            android:maxLength="2"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/month"
            style="@style/InputEditTextStyle"
            android:hint="@string/month"
            android:maxLength="2"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/year"
            style="@style/InputEditTextStyle"
            android:hint="@string/year"
            android:maxLength="4"/>

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/calendarSwitch"
        style="@style/SwitchStyle"
        android:text="@string/show_steps"/>

    <Button
        android:id="@+id/button"
        style="@style/ButtonStyle"
        android:text="@string/compute"/>

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollViewStyle">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                android:id="@+id/stepsView"
                style="@style/TextViewStyle"/>

            <TextView
                android:id="@+id/dateView"
                style="@style/TextViewStyle"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
