<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nbc_number"
            android:hint="@string/number"
            style="@style/InputEditTextStyle"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nbc_base"
            android:hint="@string/base"
            style="@style/InputEditTextStyle"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nbc_new_base"
            android:hint="@string/new_base"
            style="@style/InputEditTextStyle"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:text="@string/compute"
        style="@style/ButtonStyle"/>

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollViewStyle">

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewStyle"/>
    </ScrollView>


</LinearLayout>